--- a/source/_posts/linux/快速搭建环境记录.md
+++ b/source/_posts/linux/快速搭建环境记录.md
@@ -3,7 +3,7 @@ title: 快速搭建环境记录
 abbrlink: 5e168f7e
 cover: 'https://static.zahui.fan/images/202211041307268.jpg'
 categories:
-  - devops
+  - linux
 tags:
   - Linux
   - 配置记录
